--- a/index.html
+++ b/index.html
@@ -244,6 +244,7 @@ PUB, Singapore's National Water Agency</a></span>
           </div>
              <ul>
       <li>Championed the development and implementation of PUB’s inaugural OT Cyber Supply Chain Risk Management policy; issued internal circular and designed an engaging awareness poster</li>
+<li>Championed the development and implementation of PUB’s inaugural IT Risk Assessment Framework one-stop portal, delivering a user-friendly interface and enhanced guidance materials that streamlined risk assessment processes and improved workflow efficiency across teams</li>
       <li>Created Vulnerability Management System SOP using workflows and flowcharts, improving operational efficiency by 50% and streamlining issue resolution for system managers</li>
 <li>Oversaw Vulnerability Management Systems (VMS) and VAPT as Officer-in-Charge (OIC); ensured audit readiness and compliance by collecting and submitting required artefacts</li>
 <li>Conducted over 100 cybersecurity risk assessments and secured approvals for 300+ project go-live decisions</li>
