update mode  of  study

--- a/index.html
+++ b/index.html
@@ -812,6 +812,7 @@ PUB, Singapore's National Water Agency</a></span>
             </span>
             <p>
               <b>Degree:</b> Master of Science in Cyber Security<br>
+	      <b>Mode:</b> Part-time<br>
               <b>Year:</b> 2024 – 2026
             </p>
 
@@ -851,6 +852,7 @@ PUB, Singapore's National Water Agency</a></span>
             </span>
             <p>
               <b>Degree:</b> Bachelor of Computer Science (Cyber Security)<br>
+	      <b>Mode:</b> Full-time<br>
               <b>Year:</b> 2020 – 2023
             </p>
 
