--- a/index.html
+++ b/index.html
@@ -257,10 +257,9 @@ PUB, Singapore's National Water Agency</a></span>
 <li>Created admin accounts under Computer Management for VAPT vendors on VAPT laptops to conduct secure testing</li>
       <li>Reviewed system go-live documentation including Vulnerability Assessments (VA), Penetration Tests (PT), Risk Assessments (RA), Security Configuration Reviews (SCR), hardening guides, BIA forms, and architecture diagrams</li>
       <li>Revised OT network diagrams using the Purdue Model to ensure proper segmentation and enhance ICS defense-in-depth</li>
-      <li>Enhanced tracking and oversight of cyber risks, VAPT, and purple teaming findings across all systems using Excel dashboards</li>
+      <li>Enhanced tracking and oversight of cyber risks, VAPT, and purple teaming findings across all systems using Excel dashboards and Sharepoint lists</li>
       <li>Automated weekly VMS reminders with Plumber tool and real-time remediation updates via Power Automate</li>
       <li>Created and maintained asset tags, whitelist rules, and severity recast configurations in GovTech VMS</li>
-      <li>Monitored cyber health status by updating Digital Governance Platform (DGP) records and tracking treatment plans</li>
       <li>Raised requests to whitelist VAPT laptop IPs on the application gateway firewall and ensured tested connectivity and valid credentials to facilitate secure and seamless access for VAPT vendor</li>
       <li>Mentored junior staff and led training on cybersecurity practices and use of GenAI for workflow automation</li>
       <li>Tripled document analysis efficiency using CO-STAR framework and PairChat assistants to automate tasks such as email drafting, risk inquiries, and policy reviews</li>
@@ -268,16 +267,17 @@ PUB, Singapore's National Water Agency</a></span>
       <li>Delivered threat hunting insights using SPLUNK, Arkime, ELK Stack, Windows Event Logs, and Sysmon logs</li>
       <li>Adopted STRIDE-LM and M3TID to systematically identify, model, and prioritize cybersecurity threats in risk assessments</li>
       <li>Conducted reviews of third-party VAPT reports (cloud VA, mobile PT, web PT, network PT), assessing findings derived from tools like Burp Suite, Wireshark, and Nessus</li>
-      <li>Onboarded sensitive and internet-facing systems to GovTech VMS via askGovTech platform and raised cybersecurity inquiries</li>
+      <li>Managed the full VMS lifecycle—from onboarding internet-facing and sensitive systems to GovTech VMS, to offboarding decommissioned assets—ensuring 100% agent uptime and promptly escalating issues via the askGovTech ITSM platform</li>
+<li>Raised cybersecurity inquiries via askGovTech ITSM platform on topics such as third-party/offshoring, IM8 reform, GoMax compliance and project specification requirements to support secure operations</li>
 <li>Proactively identified cloud service resources in Microsoft Azure for Cloud VA and obtained system subscription information from Azure Portal resources for VMS onboarding process</li>
-      <li>Served as cybersecurity consultant to system managers and ITSO, offering guidance on IM8, offshoring, third-party risk, audits, system hardening, and architecture</li>
+      <li>Served as cybersecurity consultant to system managers and ITSO, offering guidance on IM8, offshoring, third-party risk, audits, system hardening, architecture and more</li>
       <li>Reviewed all IT/OT hardening guides, aligned with CIS Benchmarks, and published updated versions on PUB intranet</li>
       <li>Researched and assessed Digital Rights Management solutions including Vitrium; developed user guides, use cases, and presented findings to Department Director</li>
     <!--  <li>Delivered AI and cybersecurity workflow optimization workshops to internal staff</li> -->
       <li>Attended cybersecurity events including CIDeX training 2024, CSA OTCEP Forum, and CyberArk Impact World Tour</li>
       <li>Tracked and managed spare VAPT laptops, facilitated tech refresh and supported procurement invoice processing</li>
       <li>Collaborated closely with GovTech on the Crowdsourced Vulnerability Discovery Programme (CVDP) and Government Bug Bounty Programme (GBBP) to enhance PUB’s cybersecurity posture</li>
-      <li>Continuously updated and optimized IT/OT specifications to ensure compliance with IM8 Reform and CCoP policies</li>
+      <li>Continuously updated and optimized IT/OT specifications to ensure compliance with the latest IM8 (Reform) and CCoP policies</li>
 
  <li>
 <b>Tools and Frameworks:</b> <br>
