--- a/index.html
+++ b/index.html
@@ -245,10 +245,13 @@ PUB, Singapore's National Water Agency</a></span>
              <ul>
       <li>Championed the development and implementation of PUB’s inaugural OT Cyber Supply Chain Risk Management policy; issued internal circular and designed an engaging awareness poster</li>
 <li>Championed the development and implementation of PUB’s inaugural IT Risk Assessment Framework one-stop portal, delivering a user-friendly interface and enhanced guidance materials that streamlined risk assessment processes and improved workflow efficiency across teams</li>
+<li>Pioneered a pilot leveraging GenAI to streamline IM8 (Reform) risk assessments, simplifying risk identification and boosting analytical efficiency</li>
       <li>Created Vulnerability Management System SOP using workflows and flowcharts, improving operational efficiency by 50% and streamlining issue resolution for system managers</li>
 <li>Oversaw Vulnerability Management Systems (VMS) and VAPT as Officer-in-Charge (OIC); ensured audit readiness and compliance by collecting and submitting required artefacts</li>
 <li>Conducted over 100 cybersecurity risk assessments and secured approvals for 300+ project go-live decisions</li>
+<li>Monitored cyber health status by tracking risk assessments, treatment plans, and ad-hoc VAPT using advanced Excel formulas; ensured system manager accountability and provided monthly updates to management</li>
 <li>Developed PairChat assistant bots to streamline responses to common queries about cybersecurity requirements for project specifications—including clauses on audit regimes, RTO/RPO, third-party compliance, offshoring, and more—doubling workflow efficiency</li>
+<li>Proactively monitored and identified systems requiring annual VAPT and Third Party Management using the Digital Governance Platform (DGP), ensuring timely action and up-to-date records</li>
       <li>Analyzed IPA files and mobile apps from Apple and Google Play Stores using the MTD (zConsole) portal and Zimperium technical reports to assess security risk severity and compliance with GoMAX standards</li>
       <li>Secured software installation approvals for Whole-of-Government laptops by conducting VirusTotal scans and security risk assessments</li>
       <li>Initiated and secured annual VAPT contract through GovTech Bulk Tender by creating Approval of Requirements (AOR) and raising Purchase Orders (PO); also managed contract extensions for GovTech Vulnerability Management System</li>
@@ -274,6 +277,7 @@ PUB, Singapore's National Water Agency</a></span>
       <li>Reviewed all IT/OT hardening guides, aligned with CIS Benchmarks, and published updated versions on PUB intranet</li>
       <li>Researched and assessed Digital Rights Management solutions including Vitrium; developed user guides, use cases, and presented findings to Department Director</li>
     <!--  <li>Delivered AI and cybersecurity workflow optimization workshops to internal staff</li> -->
+<li>Participated in a cybersecurity tabletop exercise using Qlik Sense and MITRE ATT&CK tools (Decider, Navigator, Technique Inference Engine) to map attacker behavior, generate TTP heatmaps, and assess cyber readiness</li>
       <li>Attended cybersecurity events including CIDeX training 2024, CSA OTCEP Forum, and CyberArk Impact World Tour</li>
       <li>Tracked and managed spare VAPT laptops, facilitated tech refresh and supported procurement invoice processing</li>
       <li>Collaborated closely with GovTech on the Crowdsourced Vulnerability Discovery Programme (CVDP) and Government Bug Bounty Programme (GBBP) to enhance PUB’s cybersecurity posture</li>
