add in volunteering exp

--- a/index.html
+++ b/index.html
@@ -88,6 +88,11 @@
             class="mdi mdi-school-outline small"></i><span>Education</span></a>
       </li>
 
+ <li class="bold">
+               <a aria-label="Navigate to the Volunteering section" href="#volunteering" class="waves-effect waves-dark teal-text"><i
+            class="mdi mdi-hand-heart-outline small"></i><span>Volunteering</span></a>
+      </li>
+
       <li class="bold">
        
         <a aria-label="Navigate to the Projects section" href="#projects" class="waves-effect waves-dark teal-text"><i
@@ -148,6 +153,12 @@
         <a aria-label="Navigate to the Education section" href="#education" class="waves-effect waves-dark teal-text"><i
             class="mdi mdi-school-outline small"></i><span>Education</span></a>
       </li>
+
+<li class="bold">
+        <a aria-label="Navigate to the Volunteering section" href="#volunteering" class="waves-effect waves-dark teal-text"><i
+            class="mdi mdi-hand-heart-outline small"></i><span>Volunteering</span></a>
+      </li>
+
       <li class="bold">
         <a aria-label="Navigate to the Projects section" href="#projects" class="waves-effect waves-dark teal-text"><i
             class="mdi mdi-book-open-page-variant small"></i><span>Projects</span></a>
@@ -882,6 +893,35 @@ PUB, Singapore's National Water Agency</a></span>
 
     </div>
   </div>
+</section>
+
+<!-- Volunteering -->
+    <section id="volunteering" class="section scrollspy">
+      <h3 class="page-title white-text teal">Volunteering</h3>
+      <div class="container">
+
+        <div class="card">
+          <div class="card-content">
+            <div class="row">
+              <div class="col s12 m2">
+                <a href="https://www.police.gov.sg/" target="_blank"><img alt="Police logo"
+                    src="/assets/img/spf.png" class="responsive-img center-block" /></a>
+              </div>
+              <div class="col s12 m10">
+                <p>
+                  <span class="card-title"><a href="https://www.police.gov.sg/" target="_blank"
+                      class="teal-text hoverline">Singapore Police Force</a></span>
+                </p>
+              </div>
+            </div>
+     <div class="card-action">
+            <span> Volunteer, Cyber Guardian Plus (CG+) | Jul 2025 - Present </span>
+          </div>
+             <ul>
+       <li>Participated in the inaugural CG+ engagement session organised by the SPF Cybercrime Command, covering essential knowledge such as the cybercrime landscape, current trends, volunteer training, ethical guidelines, and more</li>
+    </ul>
+          </div>
+        </div>
 </section>
 
     <!-- Fourth Section: Projects -->
