try change  fmt

--- a/index.html
+++ b/index.html
@@ -245,8 +245,7 @@ With expertise spanning digital forensics, malware analysis, open-source intelli
               <div class="col s12 m10">
                 <p>
                   <span class="card-title"><a href="https://www.pub.gov.sg/" target="_blank"
-                      class="teal-text hoverline">
-PUB, Singapore's National Water Agency</a></span>
+                      class="teal-text hoverline">PUB, Singapore's National Water Agency</a></span>
                 </p>
               </div>
             </div>
