--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@ With expertise spanning digital forensics, malware analysis, open-source intelli
 <li>Proactively monitored and identified systems requiring annual VAPT and Third Party Management using the Digital Governance Platform (DGP), ensuring timely action and up-to-date records</li>
       <li>Analyzed IPA files and mobile apps from Apple and Google Play Stores using the MTD (zConsole) portal and Zimperium technical reports to assess security risk severity and compliance with GoMAX standards</li>
       <li>Secured software installation approvals for Whole-of-Government laptops by conducting VirusTotal scans and security risk assessments</li>
-      <li>Initiated and secured annual VAPT contract through GovTech Bulk Tender by creating Approval of Requirements (AOR) and raising Purchase Orders (PO); also managed contract extensions for GovTech Vulnerability Management System</li>
+      <li>Initiated and secured the annual VAPT contract through GovTech Bulk Tender by creating Approval of Requirements (AOR), raising Purchase Orders (PO), and processing Goods Received Notes (GRNs); also managed contract extensions for GovTech Vulnerability Management System</li>
       <li>Coordinated and scheduled over 100+ VAPT exercises across IT and OT systems; ensured timely remediation and validation of findings within IM8 timelines</li>
  <li>Engaged with VAPT vendors to deepen hands-on expertise in Burp Suite’s hybrid testing methods, strengthening VAPT capabilities as VAPT OIC</li>
 <li>Created admin accounts under Computer Management for VAPT vendors on VAPT laptops to conduct secure testing</li>
@@ -303,7 +303,7 @@ With expertise spanning digital forensics, malware analysis, open-source intelli
 <strong>Standards & Frameworks:</strong> NIST Cybersecurity Framework, CIS Benchmarks, Instruction Manual for ICT&SS Management (IM8), IM8 (Reform), Application Infrastructure Architecture Standard (AIAS), Cybersecurity Code of Practice (CCoP), GoMAX Compliance, CSG Moderation Framework<br>
 <strong>OT & ICS Technologies:</strong> OT Architecture, Purdue Model, SCADA, HMI, PLC, Engineering Workstations, MITRE ICS Framework <br>
 <strong>Enterprise & Collaboration Tools:</strong> Microsoft Visio, Microsoft SharePoint (Webpage/Portal Building), Qlik Sense, (Excel, Powerpoint, Word), Risk Assessments, BIA Forms, Architecture Diagrams, VAPT Reports Reviews, Source Code Reviews, DRM Solutions (Vitrium), Padlet<br>
-<strong>Tender & Procurement:</strong> GovTech Bulk Tender, Call Bulk Tender, AOR, PO, GeBiz <br>
+<strong>Tender & Procurement:</strong> GovTech Bulk Tender, Call Bulk Tender, AOR, PO, GRN, GeBiz <br>
 <!-- <strong>Certifications:</strong> CompTIA Security+, CRISC, CISSP -->
 </li>
 </ul>
