small edit to volunteer desc

--- a/index.html
+++ b/index.html
@@ -894,7 +894,7 @@ With expertise spanning digital forensics, malware analysis, open-source intelli
   </div>
 </section>
 
-<!-- Volunteering -->
+<!-- f -->
     <section id="volunteering" class="section scrollspy">
       <h3 class="page-title white-text teal">Volunteering</h3>
       <div class="container">
@@ -917,7 +917,7 @@ With expertise spanning digital forensics, malware analysis, open-source intelli
             <span> Volunteer, Cyber Guardian Plus (CG+) | Jul 2025 - Present </span>
           </div>
              <ul>
-       <li>Participated in the inaugural CG+ engagement session organised by the SPF Cybercrime Command, covering essential knowledge such as the cybercrime landscape, current trends, volunteer training, ethical guidelines, and more</li>
+       <li>Participated in the inaugural CG+ engagement session organised by the SPF Cybercrime Command, covering essential knowledge such as the cybercrime landscape, current trends, volunteer training, ethical guidelines and related resources</li>
     </ul>
           </div>
         </div>
