--- a/index.html
+++ b/index.html
@@ -1138,7 +1138,7 @@ This collection includes CTF competitions/challenges, in areas like OSINT, Web, 
                 <strong>Location:</strong> Centre for Strategic Infocomm Technologies (CSIT)
               </p>
               <p style="font-size: 1rem; color: #616161;">
-                Awarded the grand prize for <strong>CSIT Challenge of Wits Week 3 – Cyber Forensics & Cryptography</strong>, selected from among hundreds of participants for accurately solving the challenge.
+Awarded the grand prize for <strong>CSIT Challenge of Wits Week 3 – Cyber Forensics & Cryptography</strong>, selected from hundreds of participants as one of the few to accurately solve the challenge.
               </p>
               <p style="font-size: 1rem;">
                 <a href="https://www.linkedin.com/feed/update/urn:li:activity:6929613335273369600/" target="_blank" class="teal-text text-darken-2">
