update ai tools

--- a/index.html
+++ b/index.html
@@ -524,10 +524,11 @@ With expertise spanning digital forensics, malware analysis, open-source intelli
     <h4 class="brown-text light">🤖 AI & Automation</h4>
     <div class="row text-center">
       <div class="col s4 m2"><img src="/assets/img/pairchat.png" class="responsive-img"><p>PairChat</p></div>
+<div class="col s4 m2"><img src="/assets/img/copilot.jpg" class="responsive-img"><p>M365 Copilot</p></div>
       <div class="col s4 m2"><img src="/assets/img/aibots.png" class="responsive-img"><p>AiBots</p></div>
      <div class="col s4 m2"><img src="/assets/img/plumber.png" class="responsive-img"><p>Plumber</p></div>
  <div class="col s4 m2"><img src="/assets/img/power-automate.png" class="responsive-img"><p>Power Automate</p></div>
-     <div class="col s4 m2"><img src="/assets/img/leonardo.png" class="responsive-img"><p>Leonardo AI</p></div>
+ <!--    <div class="col s4 m2"><img src="/assets/img/leonardo.png" class="responsive-img"><p>Leonardo AI</p></div> -->
      <div class="col s4 m2"><img src="/assets/img/elevenlabs.png" class="responsive-img"><p>ElevenLabs</p></div>
     </div>
   </div>
