--- a/index.html
+++ b/index.html
@@ -297,10 +297,10 @@ With expertise spanning digital forensics, malware analysis, open-source intelli
 <b>Tools and Frameworks:</b> <br>
 <strong>Security Platforms:</strong> Microsoft Azure, Microsoft Sentinel, Microsoft Defender for Endpoint (MDE), Microsoft Intune, Symantec Endpoint Protection (SEP), Cortex XDR, Menlo Security<br>
 <strong>AI & Automation Tools:</strong> Agentic AI, PairChat, AiBots, Microsoft Copilot, GenAI, Prompt Engineering Playbook, CO-STAR, Power Automate, Plumber<br>
-<strong>Threat Intelligence & Modeling:</strong> MITRE ATT&CK (ICS & Enterprise), CVSS Calculator, National Vulnerability Database (NVD), STRIDE-LM Threat Model, M3TID, PEAK Threat Hunting Framework, KC7, Pyramid of Pain <br>
+<strong>Threat Intelligence & Modeling:</strong> MITRE ATT&CK (ICS & Enterprise), CVSS Calculator, National Vulnerability Database (NVD), STRIDE-LM Threat Model, M3TID, PEAK Threat Hunting Framework, KC7, Pyramid of Pain, Common Vulnerabilities and Exposures (CVE), Exploit Prediction Scoring System (EPSS)<br>
 <strong>Log Analysis & Aggregation:</strong> SPLUNK, ELK Stack (Elasticsearch, Logstash, Kibana), Arkime, Windows Event Logs, Sysmon Logs <br>
-<strong>Security Assessment & Testing:</strong> Burp Suite, Wireshark, Nessus, zConsole, Kape, VirusTotal, SonarQube, VAPT (Mobile, Web, Cloud, Network) <br>
-<strong>Standards & Frameworks:</strong> NIST Cybersecurity Framework, CIS Benchmarks, Instruction Manual for ICT&SS Management (IM8), IM8 (Reform), Application Infrastructure Architecture Standard (AIAS), Cybersecurity Code of Practice (CCoP), GoMAX Compliance, CSG Moderation Framework<br>
+<strong>Security Assessment & Testing:</strong> Burp Suite, Wireshark, Nessus, zConsole, Kape, VirusTotal, SonarQube, VAPT (Mobile, Web, Cloud, Network), Penetration Testing Execution Standard (PTES), Vulnerability Assessment Framework<br>
+<strong>Standards & Frameworks:</strong> NIST Cybersecurity Framework, CIS Benchmarks, Instruction Manual for ICT&SS Management (IM8), IM8 (Reform), Application Infrastructure Architecture Standard (AIAS), Cybersecurity Code of Practice (CCoP), GoMAX Compliance, CSG Moderation Framework, Scythe Purple Team Exercise Framework (PTEF)<br>
 <strong>OT & ICS Technologies:</strong> OT Architecture, Purdue Model, SCADA, HMI, PLC, Engineering Workstations, MITRE ICS Framework <br>
 <strong>Enterprise & Collaboration Tools:</strong> Microsoft Visio, Microsoft SharePoint (Webpage/Portal Building), Qlik Sense, (Excel, Powerpoint, Word), Risk Assessments, BIA Forms, Architecture Diagrams, VAPT Reports Reviews, Source Code Reviews, DRM Solutions (Vitrium), Padlet<br>
 <strong>Tender & Procurement:</strong> GovTech Bulk Tender, Call Bulk Tender, AOR, PO, GRN, GeBiz <br>
@@ -496,11 +496,13 @@ With expertise spanning digital forensics, malware analysis, open-source intelli
         <h4 class="brown-text light">💡 Threat Modeling & Frameworks</h4>
         <div class="row text-center">
 <div class="col s4 m2"><img src="/assets/img/ciatriad.png" class="responsive-img"><p>CIA Triad</p></div>
-<div class="col s4 m2"><img src="/assets/img/ckc.png" class="responsive-img"><p>Cyber Kill Chain</p></div>
-          <div class="col s4 m2"><img src="/assets/img/mitre.png" class="responsive-img"><p>MITRE ATT&CK</p></div>
+<!--<div class="col s4 m2"><img src="/assets/img/ckc.png" class="responsive-img"><p>Cyber Kill Chain</p></div>-->
+          <div class="col s4 m2"><img src="/assets/img/mitreattack.png" class="responsive-img"><p>MITRE ATT&CK</p></div>
+          <div class="col s4 m2"><img src="/assets/img/mitredefend.png" class="responsive-img"><p>MITRE D3FEND</p></div>
           <div class="col s4 m2"><img src="/assets/img/nist.png" class="responsive-img"><p>NIST CSF</p></div>
           <div class="col s4 m2"><img src="/assets/img/owasp.png" class="responsive-img"><p>OWASP Top 10</p></div>
-  <div class="col s4 m2"><img src="/assets/img/pop.jpg" class="responsive-img"><p>Pyramid of Pain</p></div>
+<!--  <div class="col s4 m2"><img src="/assets/img/pop.jpg" class="responsive-img"><p>Pyramid of Pain</p></div>-->
+<div class="col s4 m2"><img src="/assets/img/stridelm.png" class="responsive-img"><p>STRIDE-LM</p></div>
         </div>
       </div>
     </div>
