--- a/index.html
+++ b/index.html
@@ -530,8 +530,9 @@ With expertise spanning digital forensics, malware analysis, open-source intelli
       <div class="col s4 m2"><img src="/assets/img/aibots.png" class="responsive-img"><p>AiBots</p></div>
      <div class="col s4 m2"><img src="/assets/img/plumber.png" class="responsive-img"><p>Plumber</p></div>
  <div class="col s4 m2"><img src="/assets/img/power-automate.png" class="responsive-img"><p>Power Automate</p></div>
- <!--    <div class="col s4 m2"><img src="/assets/img/leonardo.png" class="responsive-img"><p>Leonardo AI</p></div> -->
-     <div class="col s4 m2"><img src="/assets/img/elevenlabs.png" class="responsive-img"><p>ElevenLabs</p></div>
+ <!--    <div class="col s4 m2"><img src="/assets/img/leonardo.png" class="responsive-img"><p>Leonardo AI</p></div> 
+     <div class="col s4 m2"><img src="/assets/img/elevenlabs.png" class="responsive-img"><p>ElevenLabs</p></div>-->
+<div class="col s4 m2"><img src="/assets/img/transcribe.png" class="responsive-img"><p>Transcribe</p></div>
     </div>
   </div>
 </div>
