--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ With expertise spanning digital forensics, malware analysis, open-source intelli
  <li>
 <b>Tools and Frameworks:</b> <br>
 <strong>Security Platforms:</strong> Microsoft Azure, Microsoft Sentinel, Microsoft Defender for Endpoint (MDE), Microsoft Intune, Symantec Endpoint Protection (SEP), Cortex XDR, Menlo Security<br>
-<strong>AI & Automation Tools:</strong> Agentic AI, PairChat, AiBots, Microsoft Copilot, GenAI, Prompt Engineering Playbook, CO-STAR, Power Automate, Plumber<br>
+<strong>AI & Automation Tools:</strong> Agentic AI, PairChat, AiBots, Microsoft Copilot, GenAI, Prompt Engineering Playbook, CO-STAR, Power Automate, Plumber, Transcribe<br>
 <strong>Threat Intelligence & Modeling:</strong> MITRE ATT&CK (ICS & Enterprise), CVSS Calculator, National Vulnerability Database (NVD), STRIDE-LM Threat Model, M3TID, PEAK Threat Hunting Framework, KC7, Pyramid of Pain, Common Vulnerabilities and Exposures (CVE), Exploit Prediction Scoring System (EPSS)<br>
 <strong>Log Analysis & Aggregation:</strong> SPLUNK, ELK Stack (Elasticsearch, Logstash, Kibana), Arkime, Windows Event Logs, Sysmon Logs <br>
 <strong>Security Assessment & Testing:</strong> Burp Suite, Wireshark, Nessus, zConsole, Kape, VirusTotal, SonarQube, VAPT (Mobile, Web, Cloud, Network), Penetration Testing Execution Standard (PTES), Vulnerability Assessment Framework<br>
