--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@ With expertise spanning digital forensics, malware analysis, open-source intelli
       <li>Continuously updated and optimized IT/OT specifications to ensure compliance with the latest IM8 (Reform) and CCoP policies</li>
 
  <li>
-<b>Tools and Frameworks:</b> <br>
+<b>Skills:</b> <br>
 <strong>Security Platforms:</strong> Microsoft Azure, Microsoft Sentinel, Microsoft Defender for Endpoint (MDE), Microsoft Intune, Symantec Endpoint Protection (SEP), Cortex XDR, Menlo Security<br>
 <strong>AI & Automation Tools:</strong> Agentic AI, PairChat, AiBots, Microsoft Copilot, GenAI, Prompt Engineering Playbook, CO-STAR, Power Automate, Plumber, Transcribe<br>
 <strong>Threat Intelligence & Modeling:</strong> MITRE ATT&CK (ICS & Enterprise), CVSS Calculator, National Vulnerability Database (NVD), STRIDE-LM Threat Model, M3TID, PEAK Threat Hunting Framework, KC7, Pyramid of Pain, Common Vulnerabilities and Exposures (CVE), Exploit Prediction Scoring System (EPSS)<br>
@@ -922,6 +922,8 @@ With expertise spanning digital forensics, malware analysis, open-source intelli
           </div>
              <ul>
        <li>Participated in the inaugural CG+ engagement session organised by the SPF Cybercrime Command, covering essential knowledge such as the cybercrime landscape, current trends, volunteer training, ethical guidelines and related resources</li>
+ <li><b>Skills: </b>CSA Internet Hygiene Portal, CSA Password Checker, ScamShield, scam identification and reporting on social media(TikTok, Instagram), phishing awareness, cyber threat landscape</li>
+
     </ul>
           </div>
         </div>
