--- a/index.html
+++ b/index.html
@@ -875,7 +875,7 @@ With expertise spanning digital forensics, malware analysis, open-source intelli
             </p>
 
             <!-- Courseworks -->
-            <p><b>Relevant Courseworks (all High Distinction):</b></p>
+            <p><b>Relevant Courseworks (All High Distinction):</b></p>
             <ul>
               <li>Cybersecurity</li>
               <li>System Security</li>
@@ -922,7 +922,7 @@ With expertise spanning digital forensics, malware analysis, open-source intelli
           </div>
              <ul>
        <li>Participated in the inaugural CG+ engagement session organised by the SPF Cybercrime Command, covering essential knowledge such as the cybercrime landscape, current trends, volunteer training, ethical guidelines and related resources</li>
- <li><b>Skills: </b>CSA Internet Hygiene Portal, CSA Password Checker, ScamShield, scam identification and reporting on social media(TikTok, Instagram), phishing awareness, cyber threat landscape</li>
+ <li><b>Skills: </b>CSA Internet Hygiene Portal, CSA Password Checker, ScamShield, scam identification and reporting on social media (TikTok, Instagram), phishing awareness, cyber threat landscape</li>
 
     </ul>
           </div>
