add in volunteer img

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width initial-scale=1" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
+<link href="https://cdn.jsdelivr.net/npm/lightbox2@2/dist/css/lightbox.min.css" rel="stylesheet" />
+<script src="https://cdn.jsdelivr.net/npm/lightbox2@2/dist/js/lightbox.min.js"></script>
+
   <!-- Google Tag Manager -->
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
   new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -898,7 +901,7 @@ With expertise spanning digital forensics, malware analysis, open-source intelli
   </div>
 </section>
 
-<!-- f -->
+<!-- Volunteering -->
     <section id="volunteering" class="section scrollspy">
       <h3 class="page-title white-text teal">Volunteering</h3>
       <div class="container">
@@ -921,7 +924,26 @@ With expertise spanning digital forensics, malware analysis, open-source intelli
             <span> Volunteer, Cyber Guardian Plus (CG+) | Jul 2025 - Present </span>
           </div>
              <ul>
-       <li>Participated in the inaugural CG+ engagement session organised by the SPF Cybercrime Command, covering essential knowledge such as the cybercrime landscape, current trends, volunteer training, ethical guidelines and related resources</li>
+       <li>Participated in the inaugural CG+ engagement session organised by the SPF Cybercrime Command, covering essential knowledge such as the cybercrime landscape, current trends, volunteer training, ethical guidelines and related resources
+ <!-- Image Gallery for this bullet point -->
+            <div class="row">
+              <div class="col s4">
+                <a href="/assets/img/CG+_Group Photo 1.jpg" data-lightbox="cgplus1" data-title="CG+ Session - Overview">
+                  <img src="/assets/img/cgplus1_thumb.jpg" class="responsive-img z-depth-1" alt="CG+ Image 1" />
+                </a>
+              </div>
+              <div class="col s4">
+                <a href="/assets/img/CG+_Group Photo 2.jpg" data-lightbox="cgplus1" data-title="CG+ Session - Group Photo">
+                  <img src="/assets/img/cgplus2_thumb.jpg" class="responsive-img z-depth-1" alt="CG+ Image 2" />
+                </a>
+              </div>
+              <div class="col s4">
+                <a href="/assets/img/cgplus3_full.jpg" data-lightbox="cgplus1" data-title="CG+ Session - Activity">
+                  <img src="/assets/img/cgplus3_thumb.jpg" class="responsive-img z-depth-1" alt="CG+ Image 3" />
+                </a>
+              </div>
+            </div>
+</li>
  <li><b>Skills: </b>CSA Internet Hygiene Portal, CSA Password Checker, ScamShield, scam identification and reporting on social media (TikTok, Instagram), phishing awareness, cyber threat landscape</li>
 
     </ul>
