--- a/index.html
+++ b/index.html
@@ -924,26 +924,20 @@ With expertise spanning digital forensics, malware analysis, open-source intelli
             <span> Volunteer, Cyber Guardian Plus (CG+) | Jul 2025 - Present </span>
           </div>
              <ul>
-       <li>Participated in the inaugural CG+ engagement session organised by the SPF Cybercrime Command, covering essential knowledge such as the cybercrime landscape, current trends, volunteer training, ethical guidelines and related resources
- <!-- Image Gallery for this bullet point -->
-            <div class="row">
-              <div class="col s4">
-                <a href="/assets/img/CG+_Group Photo 1.jpg" data-lightbox="cgplus1" data-title="CG+ Session - Overview">
-                  <img src="/assets/img/cgplus1_thumb.jpg" class="responsive-img z-depth-1" alt="CG+ Image 1" />
-                </a>
-              </div>
-              <div class="col s4">
-                <a href="/assets/img/CG+_Group Photo 2.jpg" data-lightbox="cgplus1" data-title="CG+ Session - Group Photo">
-                  <img src="/assets/img/cgplus2_thumb.jpg" class="responsive-img z-depth-1" alt="CG+ Image 2" />
-                </a>
-              </div>
-              <div class="col s4">
-                <a href="/assets/img/cgplus3_full.jpg" data-lightbox="cgplus1" data-title="CG+ Session - Activity">
-                  <img src="/assets/img/cgplus3_thumb.jpg" class="responsive-img z-depth-1" alt="CG+ Image 3" />
-                </a>
-              </div>
-            </div>
-</li>
+       <li>Participated in the inaugural CG+ engagement session organised by the SPF Cybercrime Command, covering essential knowledge such as the cybercrime landscape, current trends, volunteer training, ethical guidelines and related resources</li>
+ <!-- 2-Image Gallery (Lightbox) -->
+  <div class="row" style="margin-left: 1rem; margin-top: -0.5rem;">
+    <div class="col s12 m6 center-align">
+      <a href="/assets/img/cgplus1_full.jpg" data-lightbox="cgplus1" data-title="CG+ Session - Group Photo">
+        <img src="/assets/img/cgplus1_thumb.jpg" class="responsive-img z-depth-1" alt="CG+ Group Photo" style="max-height: 180px;" />
+      </a>
+    </div>
+    <div class="col s12 m6 center-align">
+      <a href="/assets/img/cgplus2_full.jpg" data-lightbox="cgplus1" data-title="CG+ Session - Booth Activity">
+        <img src="/assets/img/cgplus2_thumb.jpg" class="responsive-img z-depth-1" alt="CG+ Booth Activity" style="max-height: 180px;" />
+      </a>
+    </div>
+  </div>
  <li><b>Skills: </b>CSA Internet Hygiene Portal, CSA Password Checker, ScamShield, scam identification and reporting on social media (TikTok, Instagram), phishing awareness, cyber threat landscape</li>
 
     </ul>
