--- a/index.html
+++ b/index.html
@@ -928,12 +928,12 @@ With expertise spanning digital forensics, malware analysis, open-source intelli
   <!-- Single image preview + hidden linked images in same Lightbox group -->
   <div class="row" style="margin-left: 1rem; margin-top: 0.5rem;">
     <div class="col s12 center-align">
-      <a href="/assets/img/CG+_Group Photo 1.jpg" data-lightbox="cgplus-gallery" data-title="CG+ Group Photo">
-        <img src="/assets/img/CG+_Group Photo 1.jpg" class="responsive-img z-depth-1" alt="CG+ Group Photo" style="max-height: 220px;" />
+      <a href="/assets/img/CG+_Group Photo_1.jpg" data-lightbox="cgplus-gallery" data-title="CG+ Group Photo">
+        <img src="/assets/img/CG+_Group Photo_1.jpg" class="responsive-img z-depth-1" alt="CG+ Group Photo" style="max-height: 220px;" />
       </a>
 
       <!-- Hidden second image in the same group -->
-      <a href="/assets/img/CG+_Group Photo 2.jpg" data-lightbox="cgplus-gallery" data-title="CG+ Booth Activity" style="display: none;"></a>
+      <a href="/assets/img/CG+_Group Photo_2.jpg" data-lightbox="cgplus-gallery" data-title="CG+ Booth Activity" style="display: none;"></a>
     </div>
   </div>
  <li><b>Skills: </b>CSA Internet Hygiene Portal, CSA Password Checker, ScamShield, scam identification and reporting on social media (TikTok, Instagram), phishing awareness, cyber threat landscape</li>
