add  in group photos for volunteer

--- a/index.html
+++ b/index.html
@@ -924,18 +924,8 @@ With expertise spanning digital forensics, malware analysis, open-source intelli
             <span> Volunteer, Cyber Guardian Plus (CG+) | Jul 2025 - Present </span>
           </div>
              <ul>
-       <li>Participated in the inaugural CG+ engagement session organised by the SPF Cybercrime Command, covering essential knowledge such as the cybercrime landscape, current trends, volunteer training, ethical guidelines and related resources</li>
-  <!-- Single image preview + hidden linked images in same Lightbox group -->
-  <div class="row" style="margin-left: 1rem; margin-top: 0.5rem;">
-    <div class="col s12 center-align">
-      <a href="/assets/img/CG+_Group Photo_1.jpg" data-lightbox="cgplus-gallery" data-title="CG+ Group Photo">
-        <img src="/assets/img/CG+_Group Photo_1.jpg" class="responsive-img z-depth-1" alt="CG+ Group Photo" style="max-height: 220px;" />
-      </a>
-
-      <!-- Hidden second image in the same group -->
-      <a href="/assets/img/CG+_Group Photo_2.jpg" data-lightbox="cgplus-gallery" data-title="CG+ Booth Activity" style="display: none;"></a>
-    </div>
-  </div>
+       <li>Participated in the inaugural CG+ engagement session organised by the SPF Cybercrime Command, covering essential knowledge such as the cybercrime landscape, current trends, volunteer training, ethical guidelines and related resources  [<a href="/assets/img/cgplus_group_photo_1.jpg" target="_blank" rel="noopener noreferrer">Group Photo 1</a>]
+    [<a href="/assets/img/cgplus_group_photo_2.jpg" target="_blank" rel="noopener noreferrer">Group Photo 2</a>]</li>
  <li><b>Skills: </b>CSA Internet Hygiene Portal, CSA Password Checker, ScamShield, scam identification and reporting on social media (TikTok, Instagram), phishing awareness, cyber threat landscape</li>
 
     </ul>
