amend link ref for  img

--- a/index.html
+++ b/index.html
@@ -924,8 +924,7 @@ With expertise spanning digital forensics, malware analysis, open-source intelli
             <span> Volunteer, Cyber Guardian Plus (CG+) | Jul 2025 - Present </span>
           </div>
              <ul>
-       <li>Participated in the inaugural CG+ engagement session organised by the SPF Cybercrime Command, covering essential knowledge such as the cybercrime landscape, current trends, volunteer training, ethical guidelines and related resources  [<a href="/assets/img/cgplus_group_photo_1.jpg" target="_blank" rel="noopener noreferrer">Group Photo 1</a>]
-    [<a href="/assets/img/cgplus_group_photo_2.jpg" target="_blank" rel="noopener noreferrer">Group Photo 2</a>]</li>
+       <li>Participated in the inaugural CG+ engagement session organised by the SPF Cybercrime Command, covering essential knowledge such as the cybercrime landscape, current trends, volunteer training, ethical guidelines and related resources  [<a href="/assets/img/CG+_group_photo_1.jpg" target="_blank" rel="noopener noreferrer">Group Photo 1</a>] [<a href="/assets/img/CG+_group_photo_2.jpg" target="_blank" rel="noopener noreferrer">Group Photo 2</a>]</li>
  <li><b>Skills: </b>CSA Internet Hygiene Portal, CSA Password Checker, ScamShield, scam identification and reporting on social media (TikTok, Instagram), phishing awareness, cyber threat landscape</li>
 
     </ul>
