--- a/index.html
+++ b/index.html
@@ -920,9 +920,15 @@ With expertise spanning digital forensics, malware analysis, open-source intelli
                 </p>
               </div>
             </div>
-     <div class="card-action">
-            <span> Volunteer, <img src="assets/ccc.jpg" alt="CG+ Logo" style="height: 1em; vertical-align: middle; margin-right: 4px;">Cyber Guardian Plus (CG+) | Jul 2025 - Present </span>
-          </div>
+<div class="card-action">
+  <span>
+    Volunteer,
+    <a href="assets/ccc.jpg" target="_blank">
+      <img src="assets/ccc.jpg" alt="CG+ Logo" style="height: 1em; vertical-align: middle; margin-right: 4px;">
+    </a>
+    Cyber Guardian Plus (CG+) | Jul 2025 - Present
+  </span>
+</div>
              <ul>
        <li>Participated in the inaugural CG+ engagement session organised by the SPF Cybercrime Command, covering essential knowledge such as the cybercrime landscape, current trends, volunteer training, ethical guidelines and related resources  [<a href="/assets/img/CG+_Group Photo_1.jpg" target="_blank" rel="noopener noreferrer">Group Photo 1</a>] [<a href="/assets/img/CG+_Group Photo_2.jpg" target="_blank" rel="noopener noreferrer">Group Photo 2</a>]</li>
  <li><b>Skills: </b>CSA Internet Hygiene Portal, CSA Password Checker, ScamShield, scam identification and reporting on social media (e.g. TikTok, Instagram, Facebook), phishing awareness, cyber threat landscape</li>
