--- a/index.html
+++ b/index.html
@@ -923,8 +923,8 @@ With expertise spanning digital forensics, malware analysis, open-source intelli
 <div class="card-action">
   <span>
     Volunteer,
-    <a href="assets/ccc.jpg" target="_blank">
-      <img src="assets/ccc.jpg" alt="CG+ Logo" style="height: 1em; vertical-align: middle; margin-right: 4px;">
+    <a href="/assets/ccc.jpg" target="_blank">
+      <img src="/assets/ccc.jpg" alt="CG+ Logo" style="height: 1em; vertical-align: middle; margin-right: 4px;">
     </a>
     Cyber Guardian Plus (CG+) | Jul 2025 - Present
   </span>
