amend format  img

--- a/index.html
+++ b/index.html
@@ -923,7 +923,7 @@ With expertise spanning digital forensics, malware analysis, open-source intelli
 <div class="card-action">
   <span>
     Volunteer,
-    <a href="/assets/img/ccc.jpg" target="_blank"><img src="/assets/img/ccc.jpg" alt="CG+ Logo" style="height: 1em; vertical-align: middle; margin-right: 4px;">Cyber Guardian Plus (CG+)</a> | Jul 2025 - Present
+    <a href="/assets/img/ccc.jpg" target="_blank"><img src="/assets/img/ccc.jpg" alt="CG+ Logo" style="height: 1em; vertical-align: middle;">Cyber Guardian Plus (CG+)</a> | Jul 2025 - Present
   </span>
 </div>
              <ul>
