update  pub and dis desc

--- a/index.html
+++ b/index.html
@@ -307,6 +307,7 @@ With expertise spanning digital forensics, malware analysis, open-source intelli
 <strong>OT & ICS Technologies:</strong> OT Architecture, Purdue Model, SCADA, HMI, PLC, Engineering Workstations, MITRE ICS Framework <br>
 <strong>Enterprise & Collaboration Tools:</strong> Microsoft Visio, Microsoft SharePoint (Webpage/Portal Building), Qlik Sense, (Excel, Powerpoint, Word), Risk Assessments, BIA Forms, Architecture Diagrams, VAPT Reports Reviews, Source Code Reviews, DRM Solutions (Vitrium), Padlet<br>
 <strong>Tender & Procurement:</strong> GovTech Bulk Tender, Call Bulk Tender, AOR, PO, GRN, GeBiz <br>
+<strong>Professional:</strong> Staff Work, Team Collaboration, Project & Stakeholder Management, Presentations, Critical Thinking (Mental Models, Ladder of Inference)
 <!-- <strong>Certifications:</strong> CompTIA Security+, CRISC, CISSP -->
 </li>
 </ul>
@@ -350,9 +351,9 @@ With expertise spanning digital forensics, malware analysis, open-source intelli
 
 <strong>Cybersecurity:</strong> Network Security (Firewall, IDS/IPS, SIEM, Security Intelligence), Vulnerability Assessment, Incident Management, Server & Mobile OS Security, OSINT, OT Security<br>
 
-<strong>Frameworks & Methodologies:</strong> MITRE ATT&CK, Cyber Kill Chain, OODA Loop, Mental Models, Thirty-Six Stratagems<br>
+<strong>Frameworks & Methodologies:</strong> MITRE ATT&CK, Cyber Kill Chain, OODA Loop, Mental Models, Ladder of  Inference, Thirty-Six Stratagems<br>
 
-<strong>Professional:</strong> Leadership, Staff Work, Teamwork, Discipline, Presentations, Officer’s Creed, Military Expert’s Creed </li>
+<strong>Professional:</strong> Leadership, Staff Work, Teamwork, Discipline, Integrity, Presentations, Officer’s Creed, Military Expert’s Creed </li>
             </ul>
           </div>
         </div>
@@ -927,8 +928,10 @@ With expertise spanning digital forensics, malware analysis, open-source intelli
   </span>
 </div>
              <ul>
-       <li>Participated in the inaugural CG+ engagement session organised by the SPF Cybercrime Command, covering essential knowledge such as the cybercrime landscape, current trends, volunteer training, ethical guidelines and related resources  [<a href="/assets/img/CG+_Group Photo_1.jpg" target="_blank" rel="noopener noreferrer">Group Photo 1</a>] [<a href="/assets/img/CG+_Group Photo_2.jpg" target="_blank" rel="noopener noreferrer">Group Photo 2</a>]</li>
- <li><b>Skills: </b>CSA Internet Hygiene Portal, CSA Password Checker, ScamShield, scam identification and reporting on social media (e.g. TikTok, Instagram, Facebook), phishing awareness, cyber threat landscape</li>
+<li>Actively monitored and reported cybercrimes, scams, phishing emails, and malicious social media content to the Singapore Police Force (SPF)</li>
+<li>Participated in Community Engagement Seminar covering topics such as tackling cybercrime in Singapore, understanding deepfakes, and building collaborative defences against emerging threats</li>
+       <li>Participated in the inaugural CG+ engagement session organised by the SPF Cybercrime Command, covering essential knowledge such as the cybercrime landscape, current trends, roles, volunteer training, roadmap, ethical guidelines and related resources  [<a href="/assets/img/CG+_Group Photo_1.jpg" target="_blank" rel="noopener noreferrer">Group Photo 1</a>] [<a href="/assets/img/CG+_Group Photo_2.jpg" target="_blank" rel="noopener noreferrer">Group Photo 2</a>]</li>
+ <li><b>Skills: </b>CSA Internet Hygiene Portal, CSA Password Checker, Have I Been Pwned, ScamShield, scam identification and reporting on social media (e.g. TikTok, Instagram, Facebook), phishing awareness, cyber threat landscape</li>
 
     </ul>
           </div>
