--- a/index.html
+++ b/index.html
@@ -928,7 +928,7 @@ With expertise spanning digital forensics, malware analysis, open-source intelli
   </span>
 </div>
              <ul>
-<li>Actively monitored and reported cybercrimes, scams, phishing emails, and malicious social media content to the Singapore Police Force (SPF)</li>
+<li>Actively monitored and reported cybercrimes, scams, phishing emails, and malicious social media content to the Singapore Police Force (SPF) Cybercrime Command</li>
 <li>Participated in Community Engagement Seminar covering topics such as tackling cybercrime in Singapore, understanding deepfakes, and building collaborative defences against emerging threats</li>
        <li>Participated in the inaugural CG+ engagement session organised by the SPF Cybercrime Command, covering essential knowledge such as the cybercrime landscape, current trends, roles, volunteer training, roadmap, ethical guidelines and related resources  [<a href="/assets/img/CG+_Group Photo_1.jpg" target="_blank" rel="noopener noreferrer">Group Photo 1</a>] [<a href="/assets/img/CG+_Group Photo_2.jpg" target="_blank" rel="noopener noreferrer">Group Photo 2</a>]</li>
  <li><b>Skills: </b>CSA Internet Hygiene Portal, CSA Password Checker, Have I Been Pwned, ScamShield, scam identification and reporting on social media (e.g. TikTok, Instagram, Facebook), phishing awareness, cyber threat landscape</li>
